atualização na responsividade

--- a/question.html
+++ b/question.html
@@ -17,8 +17,8 @@
           <h3 id="Pergunta"></h3>
           <div class="respostas">
             <div class="flex">
-              <p class="Question">Pessoal</p>
-              <p class="Question">Experiência</p>
+              <p class="Question correct">Pessoal</p>
+              <p class="Question error">Experiência</p>
             </div>
             <div class="flex">
               <p class="Question">Futuro</p>
